--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -12,13 +12,11 @@
 
     <Button
         android:id="@+id/recommendButton"
-        android:layout_width="370dp"
-        android:layout_height="55dp"
+        android:layout_width="254dp"
+        android:layout_height="47dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
         android:text="Recommend Something"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchTextView" />
 
@@ -66,5 +64,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mainActivityToolbar"
         app:srcCompat="@drawable/ic_search_black_24dp" />
+
+    <Button
+        android:id="@+id/testingButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="testing"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/recommendButton"
+        app:layout_constraintTop_toBottomOf="@+id/searchTextView" />
 
 </android.support.constraint.ConstraintLayout>
