--- a/app/src/main/res/layout/activity_recommendations_list.xml
+++ b/app/src/main/res/layout/activity_recommendations_list.xml
@@ -29,6 +29,22 @@
         app:layout_constraintTop_toBottomOf="@+id/locationSearchTextView" />
 
     <TextView
+        android:id="@+id/filterByTags"
+        android:layout_width="290dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:hint="Filter by Tags"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/mainListView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintStart_toEndOf="@+id/tagButton"
+        app:layout_constraintTop_toBottomOf="@+id/locationSearchTextView" />
+
+    <TextView
         android:id="@+id/locationSearchTextView"
         android:layout_width="351dp"
         android:layout_height="39dp"
